Packages_2024/llvm-project_20.1.2/llvm/Core.inc

function LLVMBuildCatchRet(B: TLLVMBuilderRef; CatchPad: TLLVMValueRef; BB: TLLVMBasicBlockRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCatchPad(B: TLLVMBuilderRef; ParentPad: TLLVMValueRef; Args: PLLVMValueRef; NumArgs: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCleanupPad(B: TLLVMBuilderRef; ParentPad: TLLVMValueRef; Args: PLLVMValueRef; NumArgs: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildCatchSwitch(B: TLLVMBuilderRef; ParentPad: TLLVMValueRef; UnwindBB: TLLVMBasicBlockRef; NumHandlers: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMAddCase(Switch: TLLVMValueRef; OnVal: TLLVMValueRef; Dest: TLLVMBasicBlockRef); cdecl; external libllvm;
procedure LLVMAddDestination(IndirectBr: TLLVMValueRef; Dest: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetNumClauses(LandingPad: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetClause(LandingPad: TLLVMValueRef; Idx: dword): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMAddClause(LandingPad: TLLVMValueRef; ClauseVal: TLLVMValueRef); cdecl; external libllvm;
function LLVMIsCleanup(LandingPad: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetCleanup(LandingPad: TLLVMValueRef; Val: TLLVMBool); cdecl; external libllvm;
procedure LLVMAddHandler(CatchSwitch: TLLVMValueRef; Dest: TLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetNumHandlers(CatchSwitch: TLLVMValueRef): dword; cdecl; external libllvm;
procedure LLVMGetHandlers(CatchSwitch: TLLVMValueRef; Handlers: PLLVMBasicBlockRef); cdecl; external libllvm;
function LLVMGetArgOperand(Funclet: TLLVMValueRef; i: dword): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMSetArgOperand(Funclet: TLLVMValueRef; i: dword; value: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetParentCatchSwitch(CatchPad: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMSetParentCatchSwitch(CatchPad: TLLVMValueRef; CatchSwitch: TLLVMValueRef); cdecl; external libllvm;

function LLVMBuildAdd(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNSWAdd(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNUWAdd(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFAdd(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildSub(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNSWSub(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNUWSub(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFSub(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildMul(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNSWMul(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNUWMul(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFMul(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildUDiv(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildExactUDiv(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildSDiv(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildExactSDiv(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFDiv(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildURem(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildSRem(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFRem(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildShl(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildLShr(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildAShr(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildAnd(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildOr(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildXor(para1: TLLVMBuilderRef; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildBinOp(B: TLLVMBuilderRef; Op: TLLVMOpcode; LHS: TLLVMValueRef; RHS: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNeg(para1: TLLVMBuilderRef; V: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNSWNeg(B: TLLVMBuilderRef; V: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNUWNeg(B: TLLVMBuilderRef; V: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm; deprecated;
function LLVMBuildFNeg(para1: TLLVMBuilderRef; V: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildNot(para1: TLLVMBuilderRef; V: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetNUW(ArithInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetNUW(ArithInst: TLLVMValueRef; HasNUW: TLLVMBool); cdecl; external libllvm;
function LLVMGetNSW(ArithInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetNSW(ArithInst: TLLVMValueRef; HasNSW: TLLVMBool); cdecl; external libllvm;
function LLVMGetExact(DivOrShrInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetExact(DivOrShrInst: TLLVMValueRef; IsExact: TLLVMBool); cdecl; external libllvm;
function LLVMGetNNeg(NonNegInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetNNeg(NonNegInst: TLLVMValueRef; IsNonNeg: TLLVMBool); cdecl; external libllvm;
function LLVMGetFastMathFlags(FPMathInst: TLLVMValueRef): TLLVMFastMathFlags; cdecl; external libllvm;
procedure LLVMSetFastMathFlags(FPMathInst: TLLVMValueRef; FMF: TLLVMFastMathFlags); cdecl; external libllvm;
function LLVMCanValueUseFastMathFlags(Inst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetIsDisjoint(Inst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetIsDisjoint(Inst: TLLVMValueRef; IsDisjoint: TLLVMBool); cdecl; external libllvm;
function LLVMBuildMalloc(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildArrayMalloc(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Val: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildMemSet(B: TLLVMBuilderRef; Ptr: TLLVMValueRef; Val: TLLVMValueRef; Len: TLLVMValueRef; Align: dword): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildMemCpy(B: TLLVMBuilderRef; Dst: TLLVMValueRef; DstAlign: dword; Src: TLLVMValueRef; SrcAlign: dword;
  Size: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildMemMove(B: TLLVMBuilderRef; Dst: TLLVMValueRef; DstAlign: dword; Src: TLLVMValueRef; SrcAlign: dword;
  Size: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildAlloca(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildArrayAlloca(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; Val: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildFree(para1: TLLVMBuilderRef; PointerVal: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildLoad2(para1: TLLVMBuilderRef; Ty: TLLVMTypeRef; PointerVal: TLLVMValueRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildStore(para1: TLLVMBuilderRef; Val: TLLVMValueRef; Ptr: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildGEP2(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; Pointer: TLLVMValueRef; Indices: PLLVMValueRef; NumIndices: dword;
  Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildInBoundsGEP2(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; Pointer: TLLVMValueRef; Indices: PLLVMValueRef; NumIndices: dword;
  Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildGEPWithNoWrapFlags(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; Pointer: TLLVMValueRef; Indices: PLLVMValueRef; NumIndices: dword;
  Name: pchar; NoWrapFlags: TLLVMGEPNoWrapFlags): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildStructGEP2(B: TLLVMBuilderRef; Ty: TLLVMTypeRef; Pointer: TLLVMValueRef; Idx: dword; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildGlobalString(B: TLLVMBuilderRef; Str: pchar; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMBuildGlobalStringPtr(B: TLLVMBuilderRef; Str: pchar; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetVolatile(MemoryAccessInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetVolatile(MemoryAccessInst: TLLVMValueRef; IsVolatile: TLLVMBool); cdecl; external libllvm;
function LLVMGetWeak(CmpXchgInst: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetWeak(CmpXchgInst: TLLVMValueRef; IsWeak: TLLVMBool); cdecl; external libllvm;
function LLVMGetOrdering(MemoryAccessInst: TLLVMValueRef): TLLVMAtomicOrdering; cdecl; external libllvm;
procedure LLVMSetOrdering(MemoryAccessInst: TLLVMValueRef; Ordering: TLLVMAtomicOrdering); cdecl; external libllvm;
function LLVMGetAtomicRMWBinOp(AtomicRMWInst: TLLVMValueRef): TLLVMAtomicRMWBinOp; cdecl; external libllvm;
procedure LLVMSetAtomicRMWBinOp(AtomicRMWInst: TLLVMValueRef; BinOp: TLLVMAtomicRMWBinOp); cdecl; external libllvm;
